# real_time_data_engineering

./: .gitignore  .sqlfluff  BENCHMARK_RESULTS.md  Makefile  PIPELINE_LOG.md  PROJECT_LOG.md  README.md  benchmark_runner.sh  pyproject.toml  real_time_streaming_data_paths.md  week_by_week_learning.ipynb
de_template/: .env.example  Makefile  README.md
de_template/benchmark_results/: latest.json
de_template/dbt/: .user.yml  dbt_project.yml  profiles.yml
de_template/docker/: dbt.Dockerfile  flink.Dockerfile
de_template/docs/: 00_learning_path.md  01_stack_overview.md  02_local_quickstart.md  03_add_new_dataset.md  04_batch_to_streaming.md  05_prod_deploy_notes.md  06_cloud_storage.md  06_secrets_and_auth.md  07_observability.md
de_template/generator/: Dockerfile  generator.py  requirements.txt
de_template/infra/: base.yml  broker.kafka.yml  broker.redpanda.yml  catalog.rest-lakekeeper.yml  observability.optional.yml  prometheus.yml  storage.minio.yml
de_template/schemas/: taxi_trip.json
de_template/scripts/: iceberg_maintenance.sh  render_sql.py  validate.sh  (+1 more)
docs/: BENCHMARK_RESULTS.md  P01_PRODUCTION_GUIDE.md  PIPELINE_LOG.md  PROJECT_LOG.md  README.md  architecture.md  real_time_streaming_data_paths.md  week2_notes.md  week3_notes.md  week4_notes.md
notebooks/: P01_Complete_Pipeline_Notebook.ipynb  P04_Complete_Pipeline_Notebook.ipynb
nyc_taxi_dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml.example
scripts/: benchmark.py  download_data.py  gen_p04_notebook.py  setup_project.py  shell.py  validate.py  verify_data.py
(+405 files in other folders)
